fixed z-index for menu links

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -15,6 +15,7 @@ body {
 
     font-size: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    z-index: -1;
 }
 
 a {
@@ -35,7 +36,7 @@ header {
 
     background-color: cadetblue;
     color: white;
-    /* z-index: 100; */
+    z-index: 1;
 }
 
 header label {
@@ -59,6 +60,7 @@ header nav {
 
     width: 100%;
     padding: 1em;
+    opacity: 0;
 
     position: absolute;
     top: -200%;
@@ -70,10 +72,10 @@ header nav {
 }
 
 header nav a {
+    display: none;
     color: white;
     font-weight: 500;
     cursor: pointer;
-    z-index: -1;
 }
 
 #menu:checked~label #open-btn {
@@ -86,6 +88,12 @@ header nav a {
 
 #menu:checked~nav {
     top: calc(4em + 5px);
+    z-index: 0;
+    opacity: 1;
+}
+
+#menu:checked~nav a {
+    display: block;
 }
 
 @media only screen and (min-width: 768px) {
@@ -101,6 +109,10 @@ header nav a {
         width: initial;
         padding: auto;
         z-index: 1;
+    }
+
+    header nav a {
+        display: block;
     }
 }
 
